--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 </div>
                 <div class="modal-body p-4">
                     
-                    <form id="supportForm" method="POST" action="">
+                    <form id="supportForm" method="POST" action="http://localhost:5678/webhook-test/822675a4-4ca5-4988-bf8f-3a0ec23240b4">
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="customerName" class="form-label fw-semibold">
