Rename 'telephone' field to 'phone'

--- a/index.html
+++ b/index.html
@@ -528,10 +528,10 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="telephone" class="form-label fw-semibold">
+                            <label for="phone" class="form-label fw-semibold">
                                 <i class="bi bi-telephone"></i> Telephone <span class="text-danger">*</span>
                             </label>
-                            <input type="tel" class="form-control" id="telephone" name="telephone" placeholder="+1 (555) 123-4567" required>
+                            <input type="tel" class="form-control" id="phone" name="phone" placeholder="+1 (555) 123-4567" required>
                         </div>
 
                         <div class="mb-3">
