--- a/index.html
+++ b/index.html
@@ -269,6 +269,19 @@
             font-family: 'Courier New', monospace;
         }
 
+        /* Phone input styling */
+        .iti {
+            width: 100% !important;
+        }
+
+        .iti--allow-dropdown input {
+            width: 100% !important;
+        }
+
+        #phone {
+            width: 100% !important;
+        }
+
         .pulse-animation {
             animation: pulse 2s infinite;
         }
@@ -599,6 +612,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@24.2.0/build/js/intlTelInput.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@24.2.0/build/css/intlTelInput.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@24.2.0/build/js/utils.min.js"></script>
     
     <script>
         AOS.init({
@@ -607,7 +623,52 @@
             offset: 100
         });
 
-        
+        // Phone number formatting system
+        const phoneInput = document.querySelector("#phone");
+        let iti = null;
+
+        if (phoneInput) {
+            // Initialize intl-tel-input
+            iti = window.intlTelInput(phoneInput, {
+                initialCountry: "ug",
+                preferredCountries: ["ug", "us", "gb", "ca", "au", "in", "ae", "sg"],
+                separateDialCode: true,
+                utilsScript: "https://cdn.jsdelivr.net/npm/intl-tel-input@24.2.0/build/js/utils.min.js",
+                formatOnDisplay: true,
+                strictMode: false,
+                autoPlaceholder: "polite"
+            });
+
+            // Format Uganda numbers to +256 XXX XXX XXX
+            phoneInput.addEventListener('blur', function() {
+                if (phoneInput.value.trim()) {
+                    const countryData = iti.getSelectedCountryData();
+                    const countryCode = countryData.dialCode;
+
+                    if (countryCode === '+256' && iti.isValidNumber()) {
+                        // Get only digits
+                        let digits = phoneInput.value.replace(/\D/g, '');
+                        // Remove country code if present
+                        if (digits.startsWith('256')) {
+                            digits = digits.slice(3);
+                        }
+                        // Format as +256 XXX XXX XXX
+                        if (digits.length >= 9) {
+                            phoneInput.value = `+256 ${digits.slice(0, 3)} ${digits.slice(3, 6)} ${digits.slice(6, 9)}`;
+                        }
+                    } else if (iti.isValidNumber()) {
+                        phoneInput.value = iti.getNumber(intlTelInputUtils.numberFormat.INTERNATIONAL);
+                    }
+                }
+            });
+
+            // Format for submission (E164)
+            document.getElementById('supportForm').addEventListener('submit', function(e) {
+                if (phoneInput.value.trim() && iti.isValidNumber()) {
+                    phoneInput.value = iti.getNumber(intlTelInputUtils.numberFormat.E164);
+                }
+            });
+        }
 
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
